src/test/ui/associated-types/bound-lifetime-in-return-only.ok.stderr
error: compilation successful
  --> $DIR/bound-lifetime-in-return-only.rs:59:1
   |
LL | fn main() { } //[ok]~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

